--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "now --prod ./build",
-    "postdeploy": "now alias -A ./build/now.json"
+    "deploy": "now --prod ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
