--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "dotenv": "^8.2.0",
+    "enzyme-cleanup": "^1.1.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -37,6 +38,8 @@
     "last 1 safari version"
   ],
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "jsonwebtoken": "^8.5.0"
   }
 }
